--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/ximet/MapRouter#readme",
   "dependencies": {
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-google-maps": "^7.1.0",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
