--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "generate map route",
   "main": "app.js",
   "scripts": {
+    "build": "rimraf dist && webpack",
     "test": "mocha --compilers js:babel-core/register --recursive",
     "start": "./node_modules/.bin/webpack-dev-server --inline"
   },
@@ -36,7 +37,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
