--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "mocha": "^3.2.0",
+    "react-tap-event-plugin": "^2.0.1",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -44,6 +45,7 @@
     "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {
+    "material-ui": "^0.18.7",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-google-maps": "^7.2.0",
