--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "mocha": "^3.2.0",
+    "prop-types": "^15.5.10",
     "react-tap-event-plugin": "^2.0.1",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
