--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   },
   "dependencies": {
     "material-ui": "^0.18.7",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
+    "react": "^16.0.0-beta.3",
+    "react-dom": "^16.0.0-beta.3",
     "react-google-maps": "^7.2.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
