--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "seamless-immutable": "^7.1.2"
   }
 }
