delete seamless immutable. update AppView to stateLess

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "material-ui": "^0.18.7",
     "react": "^16.0.0-beta.3",
     "react-dom": "^16.0.0-beta.3",
@@ -53,7 +54,6 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^2.5.4",
-    "seamless-immutable": "^7.1.2"
+    "reselect": "^2.5.4"
   }
 }
